Work in Progress

--- a/notebooks/colab_main.ipynb
+++ b/notebooks/colab_main.ipynb
@@ -40,25 +40,35 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "import random\n",
-        "import numbers\n",
-        "import math\n",
-        "import itertools\n",
-        "import time\n",
+        "import os, sys, copy, time, math, random, numbers, itertools, tqdm, importlib, re\n",
         "import numpy as np\n",
-        "import pandas as pd\n",
-        "import rasterio\n",
-        "import pickle\n",
-        "import matplotlib.pyplot as plt\n",
-        "from skimage import transform as trans\n",
         "import numpy.ma as ma\n",
-        "import cv2\n",
-        "from collections.abc import Sequence\n",
-        "from scipy.ndimage import rotate\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "#import cv2\n",
+        "import rasterio\n",
         "import torch\n",
+        "\n",
+        "from sklearn import metrics\n",
+        "from skimage import transform as trans\n",
+        "from pathlib import Path\n",
+        "from collections.abc import Sequence\n",
+        "from datetime import datetime, timedelta\n",
+        "from scipy.ndimage import rotate\n",
         "import torch.nn as nn\n",
-        "import torch.nn.functional as F"
+        "import torch.nn.functional as F\n",
+        "from torch.nn import init\n",
+        "from torch import optim\n",
+        "from torch.optim.lr_scheduler import _LRScheduler\n",
+        "from torch.utils.data import Dataset, DataLoader\n",
+        "from torch.utils.data.sampler import SubsetRandomSampler\n",
+        "from torch.utils.tensorboard import SummaryWriter\n",
+        "\n",
+        "from IPython.core.debugger import set_trace\n",
+        "\n",
+        "%load_ext autoreload\n",
+        "%autoreload 2\n",
+        "%matplotlib inline"
       ],
       "metadata": {
         "id": "wxwiBLm8xua3"
@@ -837,7 +847,7 @@
         "#@title Custom Dataset\n",
         "\n",
         "from pathlib import Path\n",
-        "import tqdm\n",
+        "import tqdm, re\n",
         "import pandas as pd\n",
         "from torch.utils.data import Dataset\n",
         "from torch.utils.data.sampler import SubsetRandomSampler\n",
@@ -872,7 +882,6 @@
         "        self.usage = usage\n",
         "        self.dataset_name = dataset_name\n",
         "        self.split_ratio = split_ratio\n",
-        "        self.make_deterministic = make_deterministic\n",
         "        self.apply_normalization = apply_normalization\n",
         "        self.trans = trans\n",
         "\n",
@@ -1805,6 +1814,7 @@
         "            raise ValueError(\"Improper object type.\")\n"
       ],
       "metadata": {
+        "cellView": "form",
         "id": "ihbYgoxnLCNO"
       },
       "execution_count": null,
@@ -1822,14 +1832,94 @@
     {
       "cell_type": "code",
       "source": [
+        "config = {\n",
+        "    \n",
+        "    # Custom dataset params\n",
+        "    \"src_dir\": \"/content/gdrive/MyDrive/PondDataset\",\n",
+        "    \"train_dataset_name\": \"chips_binary_filtered\",\n",
+        "    \"split_ratio\": 0.8,\n",
+        "    \"apply_normalization\": True,\n",
+        "    \"transformations\": [\"v_flip\",\"h_flip\",\"d_flip\", \"rotate\", \"resize\"],\n",
+        "    \"aug_prams\": {\n",
+        "        \"scale_factor\": (0.75, 1.3), \n",
+        "        \"rotation_degree\": (-90, 90), \n",
+        "        \"bshift_gamma_range\": (0.2, 2), \n",
+        "        \"bshift_subs\": (3, 3), \n",
+        "        \"patch_shift\": True\n",
+        "    },\n",
+        "\n",
+        "    # DataLoader\n",
+        "    \"train_BatchSize\": 16,\n",
+        "    \"val_test_BatchSize\": 1,\n",
+        "\n",
+        "    # model initialization params\n",
+        "    \"n_classes\": 2,\n",
+        "    \"input_channels\": 4,\n",
+        "\n",
+        "    # Model compiler params\n",
+        "    \"working_dir\": \"\",\n",
+        "    \"n_classes\": 2,\n",
+        "    \"gpuDevices\": [0],\n",
+        "    \"init_type\": \"kaiming\",\n",
+        "    \"params_init\": None,\n",
+        "    \"freeze_params\": None,\n",
+        "    \n",
+        "    # Model fitting\n",
+        "    \"epochs\": 100,\n",
+        "    \"optimizer\": \"SGD\",\n",
+        "    \"LR\": 0.003,\n",
+        "    \"LR_policy\": \"PolynomialLR\",\n",
+        "    \"criterion\": BalancedTverskyFocalCELoss,\n",
+        "    \"momentum\": 0.95,\n",
+        "    \"resume\": False,\n",
+        "    \"resume_epoch\": None,\n",
+        "    \"lr_prams\": {\n",
+        "        # StepLR & MultiStepLR\n",
+        "        \"step_size\" : 3,\n",
+        "        \"milestones\": [5, 10, 20, 35, 50, 70, 90], \n",
+        "        \"gamma\": 0.98, \n",
+        "        # ReduceLROnPlateau\n",
+        "        \"mode\": \"min\", \n",
+        "        \"factor\": 0.8, \n",
+        "        \"patience\": 3, \n",
+        "        \"threshold\": 0.0001,\n",
+        "        \"threshold_mode\": \"rel\",\n",
+        "        \"min_lr\": 3e-6,\n",
+        "        # PolynomialLR\n",
+        "        \"max_decay_steps\": 75,\n",
+        "        \"min_learning_rate\": 1e-5,\n",
+        "        \"power\": 0.8,\n",
+        "        # CyclicLR\n",
+        "        \"base_lr\": 3e-5,\n",
+        "        \"max_lr\": 0.01,\n",
+        "        \"step_size_up\": 1100,\n",
+        "        \"mode\": \"triangular\",\n",
+        "    },\n",
+        "    \n",
+        "    # Model accuracy evaluation\n",
+        "    \"val_metric_fname\" : \"validate_metrics.csv\",   \n",
+        "}\n",
+        "\n",
+        "if not os.path.exists(config[\"working_dir\"]):\n",
+        "    os.makedirs(config[\"working_dir\"])\n",
+        "os.chdir(config[\"working_dir\"])"
+      ],
+      "metadata": {
+        "id": "CWU9hoYSHJy7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "train_dataset = CropData(src_dir = config[\"src_dir\"],\n",
         "                         usage = \"train\",\n",
         "                         dataset_name = config[\"train_dataset_name\"],\n",
         "                         split_ratio = config[\"split_ratio\"],\n",
-        "                         make_deterministic = config[\"make_deterministic\"],\n",
         "                         apply_normalization = config[\"apply_normalization\"],\n",
         "                         trans = config[\"transformations\"], \n",
-        "                         lr_params = config[\"lr_params\"])"
+        "                         aug_params = config[\"aug_params\"])"
       ],
       "metadata": {
         "id": "H11LNxFR_1ln"
@@ -1857,10 +1947,7 @@
         "                       usage = \"validation\",\n",
         "                       dataset_name = config[\"train_dataset_name\"],\n",
         "                       split_ratio = config[\"split_ratio\"],\n",
-        "                       make_deterministic = config[\"make_deterministic\"],\n",
-        "                       apply_normalization = config[\"apply_normalization\"],\n",
-        "                       trans = config[\"transformations\"], \n",
-        "                       lr_params = config[\"lr_params\"])"
+        "                       apply_normalization = config[\"apply_normalization\"])"
       ],
       "metadata": {
         "id": "1-ZRMNmsB4Vs"
@@ -1871,17 +1958,84 @@
     {
       "cell_type": "code",
       "source": [
-        "train_dataset = CropData(src_dir = config[\"src_dir\"],\n",
-        "                         usage = \"train\",\n",
-        "                         dataset_name = config[\"train_dataset_name\"],\n",
-        "                         split_ratio = config[\"split_ratio\"],\n",
-        "                         make_deterministic = config[\"make_deterministic\"],\n",
-        "                         apply_normalization = config[\"apply_normalization\"],\n",
-        "                         trans = config[\"transformations\"], \n",
-        "                         lr_params = config[\"lr_params\"])"
+        "val_loader = DataLoader(val_dataset, \n",
+        "                        batch_size = config[\"val_test_BatchSize\"], \n",
+        "                        shuffle = False)"
       ],
       "metadata": {
-        "id": "VjY5NzdVDunq"
+        "id": "1GPq1iIQ51mr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = Unet(n_classes=config[\"n_classes\"], in_channels=config[\"input_channels\"], use_skipAtt=False)"
+      ],
+      "metadata": {
+        "id": "W4TAikGXHdiH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = ModelCompiler(model,\n",
+        "                      working_dir = config[\"working_dir\"],\n",
+        "                      out_dir = config[\"out_dir\"],\n",
+        "                      num_classes = config[\"n_classes\"],\n",
+        "                      inch = config[\"input_channels\"],\n",
+        "                      gpu_devices = config[\"gpuDevices\"],\n",
+        "                      model_init_type = config[\"init_type\"], \n",
+        "                      params_init = config[\"params_init\"],\n",
+        "                      freeze_params = config[\"freeze_params\"])"
+      ],
+      "metadata": {
+        "id": "MvHe3STIHgxu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.fit(train_loader,\n",
+        "          val_loader, \n",
+        "          epochs = config[\"epochs\"], \n",
+        "          optimizer_name = config[\"optimizer\"], \n",
+        "          lr_init = config[\"LR\"],\n",
+        "          lr_policy = config[\"LR_policy\"], \n",
+        "          criterion = config[\"criterion\"], \n",
+        "          momentum = config[\"momentum\"],\n",
+        "          resume = config[\"resume\"],\n",
+        "         resume_epoch = config[\"resume_epoch\"])"
+      ],
+      "metadata": {
+        "id": "gRFkihuLHiMb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.save(save_object=\"params\")"
+      ],
+      "metadata": {
+        "id": "5AnQTiGeHl-V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.accuracy_evaluation(val_loader, filename=config[\"val_metric_fname\"])"
+      ],
+      "metadata": {
+        "id": "Evnp4uqkHq_b"
       },
       "execution_count": null,
       "outputs": []
