Work in Progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -75,7 +75,7 @@
     "    \n",
     "    # Custom dataset params\n",
     "    \"src_dir\": \"/home/data\",\n",
-    "    \"train_dataset_name\": \"test\",\n",
+    "    \"train_dataset_name\": \"chips_multi_filtered\",\n",
     "    \"split_ratio\": 0.8,\n",
     "    \"apply_normalization\": True,\n",
     "    \"transformations\": [\"v_flip\",\"h_flip\",\"d_flip\", \"rotate\", \"resize\"],\n",
