Work in Progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "194f6753-1db1-4cbd-b141-e2c680564455",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7056708e-0e49-4e4d-9d75-b65b250b791c",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "66ba94f1-2576-4bcc-bf6e-ce69f837f844",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "ddf2f45d-8019-4256-a721-1b1367381e4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pickle_dataset(dataset, file_path):\n",
+    "    try:\n",
+    "        with open(file_path, \"wb\") as fp:\n",
+    "            pickle.dump(dataset, fp)\n",
+    "        print(f\"Dataset pickled and saved to {file_path}\")\n",
+    "    except OSError as e:\n",
+    "        print(f\"Error: could not open file {file_path}: {e}\")\n",
+    "    except pickle.PickleError as e:\n",
+    "        print(f\"Error: could not pickle dataset: {e}\")\n",
+    "\n",
+    "\n",
+    "def load_pickled_dataset(file_path):\n",
+    "    \"\"\"\n",
+    "    Load pickled dataset from file path.\n",
+    "    \"\"\"\n",
+    "    dataset = pd.read_pickle(file_path)\n",
+    "    return dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "999903df-c07c-4c4f-bd02-791a07f4d06e",
    "metadata": {},
    "outputs": [],
@@ -81,32 +107,35 @@
     "    \"transformations\": [\"v_flip\",\"h_flip\",\"d_flip\", \"rotate\", \"resize\"],\n",
     "    \"aug_params\": {\n",
     "        \"scale_factor\": (0.75, 1.3), \n",
-    "        \"rotation_degree\": (-90, 90), \n",
+    "        \"rotation_degree\": (-180, -90, 90, 180), \n",
     "        \"bshift_gamma_range\": (0.2, 2), \n",
     "        \"bshift_subs\": (4, 4, 4), \n",
     "        \"patch_shift\": True\n",
     "    },\n",
     "\n",
     "    # DataLoader\n",
-    "    \"train_BatchSize\": 8,\n",
+    "    \"train_BatchSize\": 10,\n",
     "    \"val_test_BatchSize\": 1,\n",
     "\n",
     "    # model initialization params\n",
     "    \"n_classes\": 14,\n",
     "    \"input_channels\": 12,\n",
+    "    \"filter_config\": (64, 128, 256, 512, 1024, 1024),\n",
+    "    \"use_skipAtt\": False,\n",
+    "    \"train_dropout_rate\": 0.15,\n",
     "\n",
     "    # Model compiler params\n",
     "    \"working_dir\": \"/home/workdir\",\n",
-    "    \"out_dir\": \"output\",\n",
+    "    \"out_dir\": \"output2\",\n",
     "    \"gpuDevices\": [0],\n",
     "    \"init_type\": \"kaiming\",\n",
     "    \"params_init\": None,\n",
     "    \"freeze_params\": None,\n",
     "    \n",
     "    # Model fitting\n",
-    "    \"epochs\": 100,\n",
-    "    \"optimizer\": \"SGD\",\n",
-    "    \"LR\": 0.003,\n",
+    "    \"epochs\": 50,\n",
+    "    \"optimizer\": \"adam\",\n",
+    "    \"LR\": 0.01,\n",
     "    \"LR_policy\": \"PolynomialLR\",\n",
     "    \"criterion\": \"BalancedTverskyFocalCELoss(ignore_index=0)\",\n",
     "    \"momentum\": 0.95,\n",
@@ -125,9 +154,9 @@
     "        \"threshold_mode\": \"rel\",\n",
     "        \"min_lr\": 3e-6,\n",
     "        # PolynomialLR\n",
-    "        \"max_decay_steps\": 75,\n",
+    "        \"max_decay_steps\": 50,\n",
     "        \"min_learning_rate\": 1e-5,\n",
-    "        \"power\": 0.8,\n",
+    "        \"power\": 0.85,\n",
     "        # CyclicLR\n",
     "        \"base_lr\": 3e-5,\n",
     "        \"max_lr\": 0.01,\n",
@@ -137,19 +166,37 @@
     "    \n",
     "    # Model accuracy evaluation\n",
     "    \"val_metric_fname\" : \"validate_metrics.csv\"   \n",
-    "}\n",
-    "\n",
-    "if not os.path.exists(config[\"working_dir\"]):\n",
-    "    os.makedirs(config[\"working_dir\"])\n",
-    "os.chdir(config[\"working_dir\"])"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8b00efdb-8a76-4271-b77d-fb95faac315c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████| 3390/3390 [08:53<00:00,  6.36it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------ train dataset with 3390 patches created ------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "train_dataset = CropData(src_dir=config[\"src_dir\"],\n",
     "                         usage=\"train\",\n",
@@ -162,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5b898a60-29f3-4ec8-99fb-dee3bdabfb37",
    "metadata": {},
    "outputs": [],
@@ -174,10 +221,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "32ec53bd-77b4-4282-b062-66928cdaca9f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 848/848 [02:17<00:00,  6.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------ validation dataset with 848 patches created ------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "val_dataset = CropData(src_dir=config[\"src_dir\"],\n",
     "                       usage=\"validation\",\n",
@@ -188,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "78f9432a-dbf3-4981-ae2c-144aa5f46ba8",
    "metadata": {},
    "outputs": [],
@@ -200,20 +269,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "46523fb6-c853-48c4-b671-1adc41997759",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Unet(n_classes=config[\"n_classes\"], in_channels=config[\"input_channels\"], use_skipAtt=False)"
+    "model = Unet(n_classes=config[\"n_classes\"], \n",
+    "             in_channels=config[\"input_channels\"], \n",
+    "             use_skipAtt=config[\"use_skipAtt\"],\n",
+    "             filter_config=config[\"filter_config\"],\n",
+    "             dropout_rate=config[\"train_dropout_rate\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "20b69356-5b9d-4004-8db7-0ea187e3d9b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------GPU available----------\n",
+      "initialize network with kaiming.\n",
+      "total number of trainable parameters: 103.4M\n",
+      "---------- Vanilla Model compiled successfully ----------\n"
+     ]
+    }
+   ],
    "source": [
     "model = ModelCompiler(model,\n",
     "                      working_dir=config[\"working_dir\"],\n",
@@ -228,10 +312,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c363c960-0171-4f7a-a678-82dc11c75f14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------- Start training --------------------------\n",
+      "Epoch [1/50]\n",
+      "train loss:1.5957288865142867\n",
+      "validation loss: 1.6524\n",
+      "LR: 0.009829913280691513\n",
+      "time: 260\n",
+      "Epoch [2/50]\n",
+      "train loss:1.543456556171091\n",
+      "validation loss: 1.6370\n",
+      "LR: 0.009829913280691513\n",
+      "time: 299\n",
+      "Epoch [3/50]\n",
+      "train loss:1.5142733178659176\n",
+      "validation loss: 1.6152\n",
+      "LR: 0.009659305051009665\n",
+      "time: 387\n",
+      "Epoch [4/50]\n",
+      "train loss:1.4933230395162351\n",
+      "validation loss: 1.6321\n",
+      "LR: 0.00948816279509664\n",
+      "time: 396\n",
+      "Epoch [5/50]\n",
+      "train loss:1.4808795554096368\n",
+      "validation loss: 1.6691\n",
+      "LR: 0.009316473423521904\n",
+      "time: 367\n",
+      "Epoch [6/50]\n",
+      "train loss:1.464180364017993\n",
+      "validation loss: 1.6615\n",
+      "LR: 0.009144223233929244\n",
+      "time: 357\n",
+      "Epoch [7/50]\n",
+      "train loss:1.4610666613311543\n",
+      "validation loss: 1.5995\n",
+      "LR: 0.008971397868047177\n",
+      "time: 361\n",
+      "Epoch [8/50]\n",
+      "train loss:1.4529772174041884\n",
+      "validation loss: 1.5861\n",
+      "LR: 0.008797982264636113\n",
+      "time: 375\n",
+      "Epoch [9/50]\n",
+      "train loss:1.446057331948857\n",
+      "validation loss: 1.6805\n",
+      "LR: 0.008623960607884595\n",
+      "time: 406\n",
+      "Epoch [10/50]\n",
+      "train loss:1.4459166695586347\n",
+      "validation loss: 1.5952\n",
+      "LR: 0.00844931627069525\n",
+      "time: 408\n",
+      "Epoch [11/50]\n",
+      "train loss:1.4362263496646488\n",
+      "validation loss: 1.6814\n",
+      "LR: 0.008274031752217047\n",
+      "time: 392\n",
+      "Epoch [12/50]\n",
+      "train loss:1.431621448480274\n",
+      "validation loss: 1.7705\n",
+      "LR: 0.00809808860888131\n",
+      "time: 371\n",
+      "Epoch [13/50]\n",
+      "train loss:1.4319936364097934\n",
+      "validation loss: 1.6235\n",
+      "LR: 0.007921467378081396\n",
+      "time: 371\n",
+      "Epoch [14/50]\n",
+      "train loss:1.427716143363345\n",
+      "validation loss: 1.7093\n",
+      "LR: 0.0077441474934965785\n",
+      "time: 380\n",
+      "Epoch [15/50]\n",
+      "train loss:1.4221260115108658\n",
+      "validation loss: 1.6146\n",
+      "LR: 0.007566107190893889\n",
+      "time: 404\n",
+      "Epoch [16/50]\n",
+      "train loss:1.4206660616714342\n",
+      "validation loss: 1.6290\n",
+      "LR: 0.007387323403042018\n",
+      "time: 401\n",
+      "Epoch [17/50]\n",
+      "train loss:1.4206184479339286\n",
+      "validation loss: 1.6023\n",
+      "LR: 0.007207771642130538\n",
+      "time: 403\n",
+      "Epoch [18/50]\n",
+      "train loss:1.410659041376592\n",
+      "validation loss: 1.6590\n",
+      "LR: 0.00702742586779627\n",
+      "time: 405\n",
+      "Epoch [19/50]\n",
+      "train loss:1.4104053485358359\n",
+      "validation loss: 1.7420\n",
+      "LR: 0.006846258338503661\n",
+      "time: 375\n",
+      "Epoch [20/50]\n",
+      "train loss:1.4090278479201956\n",
+      "validation loss: 1.8418\n",
+      "LR: 0.006664239443591597\n",
+      "time: 373\n",
+      "Epoch [21/50]\n",
+      "train loss:1.4087765811115591\n",
+      "validation loss: 1.7065\n",
+      "LR: 0.00648133751276407\n",
+      "time: 400\n",
+      "Epoch [22/50]\n",
+      "train loss:1.406244119008382\n",
+      "validation loss: 1.7836\n",
+      "LR: 0.006297518599138999\n",
+      "time: 410\n",
+      "Epoch [23/50]\n",
+      "train loss:1.4018949168269965\n",
+      "validation loss: 1.5889\n",
+      "LR: 0.006112746231142458\n",
+      "time: 409\n",
+      "Epoch [24/50]\n",
+      "train loss:1.3976793025447205\n",
+      "validation loss: 1.8291\n",
+      "LR: 0.005926981127496242\n",
+      "time: 414\n",
+      "Epoch [25/50]\n",
+      "train loss:1.3947958907546547\n",
+      "validation loss: 1.6524\n",
+      "LR: 0.005740180868231103\n",
+      "time: 410\n",
+      "Epoch [26/50]\n",
+      "train loss:1.3970925941579813\n",
+      "validation loss: 1.6339\n",
+      "LR: 0.005552299512978886\n",
+      "time: 423\n",
+      "Epoch [27/50]\n",
+      "train loss:1.3894174172814968\n",
+      "validation loss: 1.7111\n",
+      "LR: 0.005363287155635191\n",
+      "time: 389\n",
+      "Epoch [28/50]\n",
+      "train loss:1.391333455533053\n",
+      "validation loss: 1.6032\n",
+      "LR: 0.005173089401675314\n",
+      "time: 392\n",
+      "Epoch [29/50]\n",
+      "train loss:1.3868140087718457\n",
+      "validation loss: 1.6827\n",
+      "LR: 0.0049816467507195076\n",
+      "time: 388\n",
+      "Epoch [30/50]\n",
+      "train loss:1.3944883336008123\n",
+      "validation loss: 1.6699\n",
+      "LR: 0.004788893862051862\n",
+      "time: 414\n",
+      "Epoch [31/50]\n",
+      "train loss:1.3923196240512319\n",
+      "validation loss: 1.6541\n",
+      "LR: 0.0045947586742296894\n",
+      "time: 421\n",
+      "Epoch [32/50]\n",
+      "train loss:1.3842690328581144\n",
+      "validation loss: 1.6714\n",
+      "LR: 0.0043991613409898765\n",
+      "time: 428\n",
+      "Epoch [33/50]\n",
+      "train loss:1.3819260892614853\n",
+      "validation loss: 1.6781\n",
+      "LR: 0.00420201293334409\n",
+      "time: 421\n",
+      "Epoch [34/50]\n",
+      "train loss:1.3858221983839276\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "model.fit(train_loader,\n",
     "          val_loader, \n",
