Work in Progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -66,32 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddf2f45d-8019-4256-a721-1b1367381e4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def pickle_dataset(dataset, file_path):\n",
-    "    try:\n",
-    "        with open(file_path, \"wb\") as fp:\n",
-    "            pickle.dump(dataset, fp)\n",
-    "        print(f\"Dataset pickled and saved to {file_path}\")\n",
-    "    except OSError as e:\n",
-    "        print(f\"Error: could not open file {file_path}: {e}\")\n",
-    "    except pickle.PickleError as e:\n",
-    "        print(f\"Error: could not pickle dataset: {e}\")\n",
-    "\n",
-    "\n",
-    "def load_pickled_dataset(file_path):\n",
-    "    \"\"\"\n",
-    "    Load pickled dataset from file path.\n",
-    "    \"\"\"\n",
-    "    dataset = pd.read_pickle(file_path)\n",
-    "    return dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "999903df-c07c-4c4f-bd02-791a07f4d06e",
    "metadata": {},
    "outputs": [],
@@ -166,7 +140,7 @@
     "    },\n",
     "    \n",
     "    # Model accuracy evaluation\n",
-    "    \"val_metric_fname\" : \"validate_metrics.csv\"   \n",
+    "    \"val_metric_fname\" : \"validate_metricsV2_4.csv\"   \n",
     "}"
    ]
   },
@@ -210,6 +184,37 @@
     "                       dataset_name=config[\"train_dataset_name\"],\n",
     "                       split_ratio=config[\"split_ratio\"],\n",
     "                       apply_normalization=config[\"apply_normalization\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a391e01-11c0-4196-83f4-0a9ec79f5fab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making a subset of the evaluation dataset for the purpose of debugging the code. Not part of the required steps in the pipeline.\n",
+    "\n",
+    "from torch.utils.data import Subset\n",
+    "\n",
+    "subset_indices = torch.arange(0, 26)\n",
+    "sample_val = Subset(val_dataset, subset_indices)\n",
+    "\n",
+    "val_loader = DataLoader(sample_val, \n",
+    "                        batch_size=config[\"val_test_BatchSize\"], \n",
+    "                        shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7b87734-63bc-4495-b63a-b9af626d4dda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the distribution of categories in a dataset\n",
+    "labels_count = get_labels_distribution(val_dataset)\n",
+    "plot_labels_distribution(labels_count)"
    ]
   },
   {
@@ -299,12 +304,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bc74a737-ea2f-4375-ad09-95b58d7f6221",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8ba0673f-4803-4b3e-9ebf-e279e0abcc70",
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_accuracy_evaluation2(model, dataloader, num_classes, out_name=None)"
+    "compiled_model.accuracy_evaluation(val_loader, filename=config[\"val_metric_fname\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bb12ea5-31fe-4fd1-826e-cac34287e27f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
