Work in Progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -103,10 +103,10 @@
     "\n",
     "    # Model compiler params\n",
     "    \"working_dir\": \"/home/workdir\",\n",
-    "    \"out_dir\": \"output2\",\n",
+    "    \"out_dir\": \"output3\",\n",
     "    \"gpuDevices\": [0],\n",
     "    \"init_type\": \"kaiming\",\n",
-    "    \"params_init\": None,\n",
+    "    \"params_init\": \"/home/data/chkpt/Unet_final_state.pth\",\n",
     "    \"freeze_params\": None,\n",
     "    \n",
     "    # Model fitting\n",
@@ -114,7 +114,7 @@
     "    \"optimizer\": \"sam\",\n",
     "    \"LR\": 0.01,\n",
     "    \"LR_policy\": \"PolynomialLR\",\n",
-    "    \"criterion\": \"TverskyFocalLoss(weight=[0.002539, 0.003086, 0.030139, 0.019021, 0.036699, 0.042473, 0.01405, 0.078166, 0.149378, 0.157826, 0.206315, 0.206709, 0.053593], ignore_index=0)\",\n",
+    "    \"criterion\": \"TverskyFocalCELoss(weight=[0.002539, 0.003086, 0.030139, 0.019021, 0.036699, 0.042473, 0.01405, 0.078166, 0.149378, 0.157826, 0.206315, 0.206709, 0.053593], ignore_index=0)\",\n",
     "    \"momentum\": 0.95,\n",
     "    \"resume\": False,\n",
     "    \"resume_epoch\": None,\n",
@@ -142,7 +142,7 @@
     "    },\n",
     "    \n",
     "    # Model accuracy evaluation\n",
-    "    \"val_metric_fname\" : \"validate_metricsV2_4.csv\"   \n",
+    "    \"val_metric_fname\" : \"validate_metrics_global_V1.csv\"   \n",
     "}"
    ]
   },
@@ -162,6 +162,25 @@
     "                         apply_normalization=config[\"apply_normalization\"],\n",
     "                         trans=config[\"transformations\"], \n",
     "                         **config[\"aug_params\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbfc9896-e31f-4b6d-99d4-a336ffd4326c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making a subset of the train dataset for the purpose of debugging the code. Not part of the required steps in the pipeline.\n",
+    "\n",
+    "from torch.utils.data import Subset\n",
+    "\n",
+    "subset_indices = torch.arange(0, 300)\n",
+    "sample_train = Subset(train_dataset, subset_indices)\n",
+    "\n",
+    "train_loader = DataLoader(sample_train, \n",
+    "                        batch_size=config[\"train_BatchSize\"], \n",
+    "                        shuffle=False)"
    ]
   },
   {
@@ -226,7 +245,7 @@
     "\n",
     "from torch.utils.data import Subset\n",
     "\n",
-    "subset_indices = torch.arange(0, 26)\n",
+    "subset_indices = torch.arange(0, 100)\n",
     "sample_val = Subset(val_dataset, subset_indices)\n",
     "\n",
     "val_loader = DataLoader(sample_val, \n",
@@ -353,6 +372,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e38a8d74-eadd-41b6-b9ed-3bdcaaa240c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5ccb4de-cd3a-4a99-8054-8b3974fd5d7f",
    "metadata": {},
    "outputs": [],
    "source": []
