Work in Progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -79,8 +79,11 @@
     "    # Custom dataset params\n",
     "    \"src_dir\": \"/home/data\",\n",
     "    \"train_dataset_name\": \"chips_multi_filtered\",\n",
+    "    \"train_csv_path\": \"/home/workdir/train_ids.csv\",\n",
+    "    \"val_csv_path\": \"/home/workdir/val_ids.csv\",\n",
     "    \"split_ratio\": 0.8,\n",
     "    \"apply_normalization\": True,\n",
+    "    \"normal_strategy\": \"z_value\",\n",
     "    \"transformations\": [\"v_flip\", \"h_flip\", \"d_flip\", \"rotate\", \"resize\", \"shift_brightness\"],\n",
     "    \"aug_params\": {\n",
     "        \"scale_factor\": (0.75, 1.3), \n",
@@ -142,7 +145,7 @@
     "    },\n",
     "    \n",
     "    # Model accuracy evaluation\n",
-    "    \"val_metric_fname\" : \"validate_metrics_global_V1.csv\"   \n",
+    "    \"val_metric_fname\" : \"validate_metrics_global_V2.csv\"   \n",
     "}"
    ]
   },
@@ -158,8 +161,10 @@
     "train_dataset = CropData(src_dir=config[\"src_dir\"],\n",
     "                         usage=\"train\",\n",
     "                         dataset_name=config[\"train_dataset_name\"],\n",
+    "                         csv_path=config[\"train_csv_path\"],\n",
     "                         split_ratio=config[\"split_ratio\"],\n",
     "                         apply_normalization=config[\"apply_normalization\"],\n",
+    "                         normal_strategy=config[\"normal_strategy\"],\n",
     "                         trans=config[\"transformations\"], \n",
     "                         **config[\"aug_params\"])"
    ]
@@ -230,8 +235,10 @@
     "val_dataset = CropData(src_dir=config[\"src_dir\"],\n",
     "                       usage=\"validation\",\n",
     "                       dataset_name=config[\"train_dataset_name\"],\n",
+    "                       csv_path=config[\"val_csv_path\"],\n",
     "                       split_ratio=config[\"split_ratio\"],\n",
-    "                       apply_normalization=config[\"apply_normalization\"])"
+    "                       apply_normalization=config[\"apply_normalization\"],\n",
+    "                       normal_strategy=config[\"normal_strategy\"])"
    ]
   },
   {
@@ -379,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5ccb4de-cd3a-4a99-8054-8b3974fd5d7f",
+   "id": "941320c7-ebee-4ce5-b3b0-3ce3c938b0a0",
    "metadata": {},
    "outputs": [],
    "source": []
