--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -89,7 +89,7 @@
     "        \"scale_factor\": (0.75, 1.3), \n",
     "        \"rotation_degree\": (-180, -90, 90, 180), \n",
     "        \"bshift_gamma_range\": (0.2, 2), \n",
-    "        \"bshift_subs\": (4, 4, 4), \n",
+    "        \"bshift_subs\": (6, 6, 6), \n",
     "        \"patch_shift\": True\n",
     "    },\n",
     "\n",
@@ -107,6 +107,8 @@
     "    # Model compiler params\n",
     "    \"working_dir\": \"/home/workdir\",\n",
     "    \"out_dir\": \"output3\",\n",
+    "    \"class_mapping\": {0:\"Unknown\", 1:\"Grassland\", 2:\"Forest\", 3:\"Shrubs\", 4:\"Developed\", 5:\"Open Water\", 6:\"Woody Wetlands\",\n",
+    "           7:\"Winter Wheats\", 8:\"Other Hay/Non Alfalfa\", 9:\"Corn\", 10:\"Soybeans\", 11:\"Cottons\", 12:\"Sorghum\", 13:\"Other Crops\"},\n",
     "    \"gpuDevices\": [0],\n",
     "    \"init_type\": \"kaiming\",\n",
     "    \"params_init\": \"/home/data/chkpt/Unet_final_state.pth\",\n",
@@ -176,6 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DO NOT RUN\n",
     "# Making a subset of the train dataset for the purpose of debugging the code. Not part of the required steps in the pipeline.\n",
     "\n",
     "from torch.utils.data import Subset\n",
@@ -248,6 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DO NOT RUN\n",
     "# Making a subset of the evaluation dataset for the purpose of debugging the code. Not part of the required steps in the pipeline.\n",
     "\n",
     "from torch.utils.data import Subset\n",
@@ -315,6 +319,7 @@
     "                               out_dir=config[\"out_dir\"],\n",
     "                               num_classes=config[\"n_classes\"],\n",
     "                               inch=config[\"input_channels\"],\n",
+    "                               class_mapping=config[\"class_mapping\"]\n",
     "                               gpu_devices=config[\"gpuDevices\"],\n",
     "                               model_init_type=config[\"init_type\"], \n",
     "                               params_init=config[\"params_init\"],\n",
