Work in Progress

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -84,6 +84,7 @@
     "    \"split_ratio\": 0.8,\n",
     "    \"apply_normalization\": True,\n",
     "    \"normal_strategy\": \"z_value\",\n",
+    "    \"stat_procedure\": \"gpb\",\n",
     "    \"transformations\": [\"v_flip\", \"h_flip\", \"d_flip\", \"rotate\", \"resize\", \"shift_brightness\"],\n",
     "    \"aug_params\": {\n",
     "        \"scale_factor\": (0.75, 1.3), \n",
@@ -158,6 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# STEP 1-1\n",
     "# Read the input dataset for training, pre-process it, and generate a 'torch.utils.Dataset' object \n",
     "# that can be accepted to get loaded into the model.\n",
     "train_dataset = CropData(src_dir=config[\"src_dir\"],\n",
@@ -167,6 +169,7 @@
     "                         split_ratio=config[\"split_ratio\"],\n",
     "                         apply_normalization=config[\"apply_normalization\"],\n",
     "                         normal_strategy=config[\"normal_strategy\"],\n",
+    "                         stat_procedure=config[\"stat_procedure\"],\n",
     "                         trans=config[\"transformations\"], \n",
     "                         **config[\"aug_params\"])"
    ]
@@ -198,6 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# OPTIONAL\n",
     "show_random_patches(train_dataset, sample_num=3, rgb_bands=(3, 2, 1))"
    ]
   },
@@ -208,6 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# OPTIONAL\n",
     "# Check the distribution of categories in a dataset\n",
     "labels_count = get_labels_distribution(train_dataset)\n",
     "plot_labels_distribution(labels_count)"
@@ -220,6 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# STEP 1-2\n",
     "# Batchify the training dataset and put it on the defined 'Device'.\n",
     "train_loader = DataLoader(train_dataset,\n",
     "                          batch_size=config[\"train_BatchSize\"], \n",
@@ -233,15 +239,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# STEP 1-3\n",
     "# Read the input dataset for validation, pre-process it and generate a 'torch.utils.Dataset' object \n",
     "# that can be accepted to get loaded into the model.\n",
     "val_dataset = CropData(src_dir=config[\"src_dir\"],\n",
     "                       usage=\"validation\",\n",
     "                       dataset_name=config[\"train_dataset_name\"],\n",
     "                       csv_path=config[\"val_csv_path\"],\n",
-    "                       split_ratio=config[\"split_ratio\"],\n",
     "                       apply_normalization=config[\"apply_normalization\"],\n",
-    "                       normal_strategy=config[\"normal_strategy\"])"
+    "                       normal_strategy=config[\"normal_strategy\"],\n",
+    "                       stat_procedure=config[\"stat_procedure\"])"
    ]
   },
   {
@@ -271,6 +278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# OPTIONAL\n",
     "# Check the distribution of categories in a dataset\n",
     "labels_count = get_labels_distribution(val_dataset)\n",
     "plot_labels_distribution(labels_count)"
@@ -283,6 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# STEP 1-4\n",
     "# Batchify the validation dataset and put it on the defined 'Device'.\n",
     "val_loader = DataLoader(val_dataset, \n",
     "                        batch_size=config[\"val_test_BatchSize\"], \n",
@@ -296,6 +305,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# STEP 2\n",
     "# Initialize the model\n",
     "model = Unet(n_classes=config[\"n_classes\"], \n",
     "             in_channels=config[\"input_channels\"], \n",
@@ -311,6 +321,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# STEP 3\n",
     "# Compile the model as vanilla or pre-trained object with 'fit', 'save', 'accuracy_evaluation'\n",
     "# and 'inference' methods. It also has checkpointing and resume capabilities and generates \n",
     "# tensorboard reports and graphs.\n",
@@ -333,6 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# STEP 4\n",
     "# train and validate the model for the defined number of epochs\n",
     "compiled_model.fit(train_loader,\n",
     "                   val_loader, \n",
@@ -354,6 +366,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# STEP 5\n",
     "# Same model parameters\n",
     "compiled_model.save(save_object=\"params\")"
    ]
@@ -365,18 +378,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First procedure to generate the accuracy metrics\n",
-    "compiled_model.accuracy_evaluation(val_loader, filename=config[\"val_metric_fname\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ba0673f-4803-4b3e-9ebf-e279e0abcc70",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Second procedure to generate the accuracy metrics\n",
+    "# STEP 6\n",
+    "# Generate the accuracy metrics\n",
     "compiled_model.accuracy_evaluation(val_loader, filename=config[\"val_metric_fname\"])"
    ]
   },
