--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -85,6 +85,12 @@
     "    \"apply_normalization\": True,\n",
     "    \"normal_strategy\": \"z_value\",\n",
     "    \"stat_procedure\": \"gpb\",\n",
+    "    \"global_stats\": {\n",
+    "        \"min\": np.array([0.0, 0.0, 0.0, 0.0, 0.0, 0.0] * 3),\n",
+    "        \"max\": np.array([271.0, 315.0, 464.0, 786.0, 869.0, 775.0] * 3),\n",
+    "        \"mean\": np.array([377.9830716, 653.4058739, 702.1834053, 2573.849324, 2344.568628, 1432.163695] * 3),\n",
+    "        \"std\": np.array([171.5116587, 215.5407551, 364.3545396, 686.5730746, 769.6448444, 675.9192684] * 3)\n",
+    "    },\n",
     "    \"transformations\": [\"v_flip\", \"h_flip\", \"d_flip\", \"rotate\", \"resize\", \"shift_brightness\"],\n",
     "    \"aug_params\": {\n",
     "        \"scale_factor\": (0.75, 1.3), \n",
@@ -170,6 +176,7 @@
     "                         apply_normalization=config[\"apply_normalization\"],\n",
     "                         normal_strategy=config[\"normal_strategy\"],\n",
     "                         stat_procedure=config[\"stat_procedure\"],\n",
+    "                         global_stats=config[\"global_stats\"],\n",
     "                         trans=config[\"transformations\"], \n",
     "                         **config[\"aug_params\"])"
    ]
@@ -248,7 +255,8 @@
     "                       csv_path=config[\"val_csv_path\"],\n",
     "                       apply_normalization=config[\"apply_normalization\"],\n",
     "                       normal_strategy=config[\"normal_strategy\"],\n",
-    "                       stat_procedure=config[\"stat_procedure\"])"
+    "                       stat_procedure=config[\"stat_procedure\"],\n",
+    "                       global_stats=config[\"global_stats\"])"
    ]
   },
   {
